--- a/tmux.conf
+++ b/tmux.conf
@@ -27,4 +27,4 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind-key '"' split-window -v -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
 
-run './plugins/tpm/tpm'
+run '~/.config/tmux/plugins/tpm/tpm'
