--- a/tmux.conf
+++ b/tmux.conf
@@ -20,11 +20,12 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # set vi-mode
 set-window-option -g mode-keys vi
 # keybindings
-bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi  v  send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-tonggle
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind-key -T copy-mode-vi  y  send-keys -X copy-selection-and-cancel
 
+bind-key  c  new-window      -c "#{pane_current_path}"
 bind-key '"' split-window -v -c "#{pane_current_path}"
-bind-key % split-window -h -c "#{pane_current_path}"
+bind-key  %  split-window -h -c "#{pane_current_path}"
 
 run '~/.config/tmux/plugins/tpm/tpm'
