--- a/tmux.conf
+++ b/tmux.conf
@@ -11,10 +11,17 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+# Edit configuration and reload
+bind C-e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-nvim} ~/.config/tmux/tmux.conf && tmux source ~/.config/tmux/tmux.conf && tmux display \"Config reloaded\"'"
+
+# Reload tmux configuration 
+bind C-r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded"
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @catppuccin_flavour 'frappe'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # set vi-mode
